--- a/index.html
+++ b/index.html
@@ -160,14 +160,8 @@
                     <a href="https://www.siemens.com/global/en.html" target="_blank" rel="noopener noreferrer">
                         <img src="Siemens-logo-gray.png" alt="Siemens Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
                     </a>
-                    <a href="https://www.boeing.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="Boeing_full_logo_gray.png" alt="Boeing Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
-                    </a>
-                    <a href="https://www.toyota.com/usa" target="_blank" rel="noopener noreferrer">
-                        <img src="File_Toyota.svg" alt="Toyota Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
-                    </a>
                     <a href="https://www.i2sl.org/" target="_blank" rel="noopener noreferrer">
-                        <img src="I2SL logo_long.avif" alt="I2SL Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
+                        <img src="i2sl-logo.png" alt="I2SL Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
                     </a>
                     <a href="https://www.aircuity.com/" target="_blank" rel="noopener noreferrer">
                         <img src="aircuity_logo.png" alt="Aircuity Logo" class="h-11 w-auto opacity-80 transition-all duration-300">
