--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
             top: 1.25rem;
             bottom: -1.25rem;
             width: 2px;
-            background-color: #e5e7eb; /* gray-200 */
+            background-color: rgba(255, 255, 255, 0.2); /* Lighter line for dark bg */
             transform: translateX(-50%);
+        }
+        #process .timeline-item::before {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+        body.bg-white .timeline-item::before {
+            background-color: #e5e7eb;
         }
         .timeline-item:last-child::before {
             display: none;
@@ -172,83 +178,83 @@
     </section>
 
     <!-- Our Proven Process Section -->
-    <section id="process" class="py-20 md:py-32 bg-white border-t border-gray-200">
+    <section id="process" class="py-20 md:py-32 bg-[#12748D]">
         <div class="container mx-auto px-6">
             <div class="text-center max-w-4xl mx-auto mb-20 fade-in-section">
-                <h2 class="text-5xl md:text-6xl font-bold text-gray-900">Our Proven Process</h2>
+                <h2 class="text-5xl md:text-6xl font-bold text-white">Our Proven Process</h2>
             </div>
 
             <div class="max-w-3xl mx-auto">
                 <!-- Timeline Items -->
                 <div class="relative">
                     <div class="timeline-item pb-16 pl-12 fade-in-section">
-                        <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
-                            <span class="text-[#00BBDD] font-bold text-lg">1</span>
+                        <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#12748D]">
+                            <span class="text-white font-bold text-lg">1</span>
                         </div>
-                        <h3 class="text-3xl font-bold text-gray-900 mb-2">Introduction Call</h3>
-                        <p class="text-lg font-semibold text-gray-500 mb-3">A conversation to explore your vision and our process</p>
-                        <p class="text-xl text-gray-600">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
+                        <h3 class="text-3xl font-bold text-white mb-2">Introduction Call</h3>
+                        <p class="text-lg font-semibold text-gray-300 mb-3">A conversation to explore your vision and our process</p>
+                        <p class="text-xl text-gray-200">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
                     </div>
                     <div class="timeline-item pb-16 pl-12 fade-in-section">
-                        <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
-                            <span class="text-[#00BBDD] font-bold text-lg">2</span>
+                        <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#12748D]">
+                            <span class="text-white font-bold text-lg">2</span>
                         </div>
-                        <h3 class="text-3xl font-bold text-gray-900 mb-2">Clarify the Why</h3>
-                        <p class="text-lg font-semibold text-gray-500 mb-3">Uncovering Your Purpose.</p>
-                        <p class="text-xl text-gray-600">We dig deep to get to the heart of your project's 'why' and what success truly looks like. By mapping out your product needs against practical limits like budget and timeline, we create a feasible roadmap for your vision.</p>
+                        <h3 class="text-3xl font-bold text-white mb-2">Clarify the Why</h3>
+                        <p class="text-lg font-semibold text-gray-300 mb-3">Uncovering Your Purpose.</p>
+                        <p class="text-xl text-gray-200">We dig deep to get to the heart of your project's 'why' and what success truly looks like. By mapping out your product needs against practical limits like budget and timeline, we create a feasible roadmap for your vision.</p>
                     </div>
                     <div class="timeline-item pb-16 pl-12 fade-in-section">
-                        <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
-                            <span class="text-[#00BBDD] font-bold text-lg">3</span>
+                        <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#12748D]">
+                            <span class="text-white font-bold text-lg">3</span>
                         </div>
-                        <h3 class="text-3xl font-bold text-gray-900 mb-2">Proposal</h3>
-                        <p class="text-lg font-semibold text-gray-500 mb-3">Creating the game plan for the winning team.</p>
-                        <p class="text-xl text-gray-600">Building on our shared understanding, we present your tailored game plan. This comprehensive proposal clearly outlines the cost, deliverables, timeline, and team structure, giving you full confidence in the path ahead.</p>
+                        <h3 class="text-3xl font-bold text-white mb-2">Proposal</h3>
+                        <p class="text-lg font-semibold text-gray-300 mb-3">Creating the game plan for the winning team.</p>
+                        <p class="text-xl text-gray-200">Building on our shared understanding, we present your tailored game plan. This comprehensive proposal clearly outlines the cost, deliverables, timeline, and team structure, giving you full confidence in the path ahead.</p>
                     </div>
                     <div class="timeline-item pb-16 pl-12 fade-in-section">
-                        <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
-                            <span class="text-[#00BBDD] font-bold text-lg">4</span>
+                        <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#12748D]">
+                            <span class="text-white font-bold text-lg">4</span>
                         </div>
-                        <h3 class="text-3xl font-bold text-gray-900 mb-2">Build Mode: ON</h3>
-                        <p class="text-lg font-semibold text-gray-500 mb-3">Building with Confidence, From Day One.</p>
-                        <p class="text-xl text-gray-600">With the game plan in place, we translate high-level requirements into actionable tasks. Our team establishes a clear collaboration protocol and primes the technical environment for a purposeful and efficient build.</p>
+                        <h3 class="text-3xl font-bold text-white mb-2">Build Mode: ON</h3>
+                        <p class="text-lg font-semibold text-gray-300 mb-3">Building with Confidence, From Day One.</p>
+                        <p class="text-xl text-gray-200">With the game plan in place, we translate high-level requirements into actionable tasks. Our team establishes a clear collaboration protocol and primes the technical environment for a purposeful and efficient build.</p>
                     </div>
                     <div class="timeline-item pb-16 pl-12 fade-in-section">
-                        <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
-                            <span class="text-[#00BBDD] font-bold text-lg">5</span>
+                        <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#12748D]">
+                            <span class="text-white font-bold text-lg">5</span>
                         </div>
-                        <h3 class="text-3xl font-bold text-gray-900 mb-2">Pulse</h3>
-                        <p class="text-lg font-semibold text-gray-500 mb-3">See your vision manifest – two weeks at a time.</p>
-                        <p class="text-xl text-gray-600">Your project comes alive in a steady "Pulse" of focused, two-week development cycles. This rhythm makes progress visible and maintains alignment, culminating in our core promise: a demonstration of a working software every two weeks.</p>
+                        <h3 class="text-3xl font-bold text-white mb-2">Pulse</h3>
+                        <p class="text-lg font-semibold text-gray-300 mb-3">See your vision manifest – two weeks at a time.</p>
+                        <p class="text-xl text-gray-200">Your project comes alive in a steady "Pulse" of focused, two-week development cycles. This rhythm makes progress visible and maintains alignment, culminating in our core promise: a demonstration of a working software every two weeks.</p>
                     </div>
                     <div class="timeline-item pb-16 pl-12 fade-in-section">
-                        <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
-                            <span class="text-[#00BBDD] font-bold text-lg">6</span>
+                        <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#12748D]">
+                            <span class="text-white font-bold text-lg">6</span>
                         </div>
-                        <h3 class="text-3xl font-bold text-gray-900 mb-2">The Quality Gate</h3>
-                        <p class="text-lg font-semibold text-gray-500 mb-3">Your Green Light for a Confident Launch.</p>
-                        <p class="text-xl text-gray-600">Before launch, we ensure total readiness. Every feature is rigorously tested against our highest standards, and we prepare your operational environment and empower your team for a seamless, confident go-live.</p>
+                        <h3 class="text-3xl font-bold text-white mb-2">The Quality Gate</h3>
+                        <p class="text-lg font-semibold text-gray-300 mb-3">Your Green Light for a Confident Launch.</p>
+                        <p class="text-xl text-gray-200">Before launch, we ensure total readiness. Every feature is rigorously tested against our highest standards, and we prepare your operational environment and empower your team for a seamless, confident go-live.</p>
                     </div>
                     <div class="timeline-item pb-12 pl-12 fade-in-section">
-                        <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
-                            <span class="text-[#00BBDD] font-bold text-lg">7</span>
+                        <div class="absolute w-12 h-12 bg-white/10 rounded-full flex items-center justify-center -left-6 border-4 border-[#12748D]">
+                            <span class="text-white font-bold text-lg">7</span>
                         </div>
-                        <h3 class="text-3xl font-bold text-gray-900 mb-2">Beyond Launch</h3>
-                        <p class="text-lg font-semibold text-gray-500 mb-3">Your Partner in Continuous Growth and Evolution.</p>
-                        <p class="text-xl text-gray-600">With your solution live, our focus shifts to ensuring its ongoing success. We provide robust support and proactive monitoring, turning system insights into actionable intelligence that informs your next strategic move.</p>
+                        <h3 class="text-3xl font-bold text-white mb-2">Beyond Launch</h3>
+                        <p class="text-lg font-semibold text-gray-300 mb-3">Your Partner in Continuous Growth and Evolution.</p>
+                        <p class="text-xl text-gray-200">With your solution live, our focus shifts to ensuring its ongoing success. We provide robust support and proactive monitoring, turning system insights into actionable intelligence that informs your next strategic move.</p>
                     </div>
                 </div>
             </div>
-            <div class="mt-20 pt-20 border-t border-gray-200 fade-in-section">
+            <div class="mt-20 pt-20 border-t border-white/20 fade-in-section">
                 <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
                     <div class="md:col-span-2 text-center md:text-left">
-                        <h3 class="text-4xl md:text-5xl font-bold text-gray-900">Let’s work together</h3>
-                        <p class="text-xl text-gray-600 mt-4">
+                        <h3 class="text-4xl md:text-5xl font-bold text-white">Let’s work together</h3>
+                        <p class="text-xl text-gray-200 mt-4">
                             Reach out to our team to define, make and launch new products, predictably.
                         </p>
                     </div>
                     <div class="text-center md:text-right">
-                        <a href="#contact" class="bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
+                        <a href="#contact" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
                     </div>
                 </div>
             </div>
@@ -257,31 +263,41 @@
 </main>
 
 <!-- Footer -->
-<footer class="bg-[#242D3C] text-white min-h-screen flex items-center">
-    <div class="container mx-auto px-6">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
-            <!-- Left: Get In Touch -->
-            <div class="text-center md:text-left">
-                <h2 class="text-3xl font-bold mb-6">Get In Touch</h2>
-                <div class="space-y-6 text-lg text-gray-300">
-                    <p>We'd LOVE to hear from you! Feel free to reach out to us at <a href="mailto:hello@stackitgroup.com" class="font-semibold text-white hover:underline">hello@stackitgroup.com</a> if you have any questions, need advice, or want to discuss a project.</p>
-                    <div>
-                        <p class="font-semibold">Call:</p>
-                        <p><a href="tel:+16199175387" class="hover:text-white transition-colors">+1 (619) 917-5387</a></p>
+<footer class="bg-white text-gray-800 border-t border-gray-200">
+    <div class="container mx-auto px-6 py-24">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
+            <!-- Left: Bio & Newsletter -->
+            <div class="md:col-span-1">
+                <a href="index.html" class="inline-block mb-6">
+                    <img src="logo-2025-white-background.png" alt="Stackit Logo" class="h-9 w-auto">
+                </a>
+                <p class="text-gray-500 text-base mb-12">
+                    Many leaders struggle with external development teams that lack the discipline and cohesion to deliver. That's why we built Stackit differently. Based in San Diego, CA, we provide a true software development partnership, built on a culture of deep collaboration and rigorous engineering discipline. We give you the confidence of a great in-house team, freeing you to innovate at speed.
+                </p>
+                <h2 class="text-2xl font-bold mb-4">Insights for your inbox</h2>
+                <form class="flex">
+                    <input type="email" placeholder="Enter your email" class="w-full px-4 py-3 text-gray-800 border border-gray-300 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-[#00BBDD]" required>
+                    <button type="submit" class="bg-[#00BBDD] text-white font-semibold px-6 py-3 rounded-r-lg hover:bg-[#00AACC] transition-colors">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
+                    </button>
+                </form>
+            </div>
+
+            <!-- Right: Get In Touch & Success Coded -->
+            <div class="md:col-span-1 flex flex-col items-center md:items-end">
+                <div class="text-center md:text-right w-full">
+                    <h2 class="text-2xl font-bold mb-6">Get In Touch</h2>
+                    <div class="space-y-4 text-lg text-gray-600">
+                        <p><a href="mailto:hello@stackitgroup.com" class="hover:text-black transition-colors">hello@stackitgroup.com</a></p>
+                        <p><a href="tel:+16199175387" class="hover:text-black transition-colors">+1 (619) 917-5387</a></p>
+                        <div>
+                            <a href="https://www.linkedin.com/company/stackit/" target="_blank" rel="noopener noreferrer" class="font-semibold text-gray-800 hover:underline">LinkedIn</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <!-- Center: Success Coded -->
-            <div class="flex justify-center order-first md:order-none">
-                <img src="StackitLogo2025-A-Bigger-SuccessCoded.png" alt="Success. Coded." class="h-32 w-auto">
-            </div>
-
-            <!-- Right: Bio -->
-            <div class="text-center md:text-right text-gray-400 text-base">
-                <p>
-                    Stackit is a software development agency based in San Diego, CA. With a specialty in rigorous engineering discipline and deep collaboration, we’re the preferred partner for companies that want to build extraordinary software with a team that shares their standards.
-                </p>
+                <div class="mt-12">
+                    <img src="sucess-coded-footer.png" alt="Success. Coded." class="h-16 w-auto">
+                </div>
             </div>
         </div>
     </div>
