--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </p>
                     </div>
                     <div class="text-center md:text-right">
-                        <a href="#contact" class="bg-white text-black font-semibold px-24 py-6 hover:bg-gray-200 transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
+                        <a href="#contact" class="bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
                     </div>
                 </div>
             </div>
@@ -263,7 +263,7 @@
 </main>
 
 <!-- Footer -->
-<footer class="bg-white text-gray-800 border-t border-gray-200">
+<footer class="bg-white text-gray-800 border-t border-gray-200 min-h-screen flex items-center">
     <div class="container mx-auto px-6 py-24">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
             <!-- Left: Bio & Newsletter -->
@@ -271,9 +271,12 @@
                 <a href="index.html" class="inline-block mb-6">
                     <img src="logo-2025-white-background.png" alt="Stackit Logo" class="h-9 w-auto">
                 </a>
-                <p class="text-gray-500 text-base mb-12">
-                    Many leaders struggle with external development teams that lack the discipline and cohesion to deliver. That's why we built Stackit differently. Based in San Diego, CA, we provide a true software development partnership, built on a culture of deep collaboration and rigorous engineering discipline. We give you the confidence of a great in-house team, freeing you to innovate at speed.
-                </p>
+                <div class="text-gray-500 text-base mb-12">
+                    <p>
+                        Stackit is a software development agency. Many leaders struggle with external development teams that lack the discipline and cohesion to deliver, which is why we built Stackit differently. We provide a true software development partnership, built on a culture of deep collaboration and rigorous engineering discipline. We give you the confidence of a great in-house team, freeing you to innovate at speed.
+                    </p>
+                    <p class="mt-4 font-semibold text-gray-600">San Diego, CA</p>
+                </div>
                 <h2 class="text-2xl font-bold mb-4">Insights for your inbox</h2>
                 <form class="flex">
                     <input type="email" placeholder="Enter your email" class="w-full px-4 py-3 text-gray-800 border border-gray-300 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-[#00BBDD]" required>
@@ -284,10 +287,10 @@
             </div>
 
             <!-- Right: Get In Touch & Success Coded -->
-            <div class="md:col-span-1 flex flex-col items-center md:items-end">
-                <div class="text-center md:text-right w-full">
+            <div class="md:col-span-1 flex flex-col items-center md:items-start">
+                <div class="text-center md:text-left w-full">
                     <h2 class="text-2xl font-bold mb-6">Get In Touch</h2>
-                    <div class="space-y-4 text-lg text-gray-600">
+                    <div class="space-y-4 text-base text-gray-600">
                         <p><a href="mailto:hello@stackitgroup.com" class="hover:text-black transition-colors">hello@stackitgroup.com</a></p>
                         <p><a href="tel:+16199175387" class="hover:text-black transition-colors">+1 (619) 917-5387</a></p>
                         <div>
@@ -296,7 +299,7 @@
                     </div>
                 </div>
                 <div class="mt-12">
-                    <img src="sucess-coded-footer.png" alt="Success. Coded." class="h-16 w-auto">
+                    <img src="SuccessCodedFooter.png" alt="Success. Coded." class="h-16 w-auto">
                 </div>
             </div>
         </div>
