fix: optimized mobile

--- a/index-angel.html
+++ b/index-angel.html
@@ -27,7 +27,6 @@
         font-family: 'Figtree', sans-serif;
         background-color: #ffffff; /* White background */
       }
-      /* GRADIENT UPDATED HERE */
       .gradient-text {
         background: linear-gradient(
           to right,
@@ -87,13 +86,13 @@
         <div class="container mx-auto px-6 text-center">
           <div class="max-w-5xl mx-auto">
             <h1
-              class="text-5xl md:text-7xl lg:text-8xl font-black text-black leading-tight mb-6 fade-in-section"
+              class="text-4xl sm:text-5xl md:text-7xl lg:text-8xl font-black text-black leading-tight mb-6 fade-in-section"
             >
               Your External Dev Team with
               <span class="gradient-text">In-House Drive</span>
             </h1>
             <p
-              class="text-2xl md:text-4xl text-gray-700 max-w-4xl mx-auto fade-in-section"
+              class="text-xl sm:text-2xl md:text-4xl text-gray-700 max-w-4xl mx-auto fade-in-section"
               style="transition-delay: 150ms"
             >
               Build extraordinary software, with a partner who shares your
@@ -102,7 +101,7 @@
             <div class="mt-10 fade-in-section" style="transition-delay: 300ms">
               <a
                 href="#contact"
-                class="bg-[#3F5FDD] text-white font-semibold px-24 py-6 hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block rounded-2xl"
+                class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block rounded-2xl"
                 >Get Started</a
               >
             </div>
@@ -115,12 +114,14 @@
       >
         <div class="container mx-auto px-6 text-center">
           <div class="max-w-5xl mx-auto fade-in-section">
-            <h2 class="text-5xl md:text-7xl font-bold text-black mb-12">
+            <h2
+              class="text-4xl sm:text-5xl md:text-7xl font-bold text-black mb-12"
+            >
               Finding
               <strong class="gradient-text">a good team</strong> shouldn't be so
               hard
             </h2>
-            <p class="text-2xl md:text-4xl text-gray-700">
+            <p class="text-xl sm:text-2xl md:text-4xl text-gray-700">
               Leaders with great ideas shouldn't have to struggle to find a
               competent, high-performing team
               <strong class="gradient-text">to execute their vision.</strong>
@@ -130,12 +131,12 @@
             >
               <a
                 href="case-study.html"
-                class="bg-transparent border-2 border-black text-black font-semibold px-20 py-5 hover:bg-black hover:text-white transition-colors duration-300 text-xl inline-block rounded-2xl"
+                class="bg-transparent border-2 border-black text-black font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm:text-xl hover:bg-black hover:text-white transition-colors duration-300 inline-block rounded-2xl"
                 >View Case Studies</a
               >
               <a
                 href="#contact"
-                class="bg-[#3F5FDD] text-white font-semibold px-24 py-6 hover:bg-[#3550B8] transition-colors duration-300 text-2xl inline-block rounded-2xl"
+                class="bg-[#3F5FDD] text-white font-semibold px-12 py-5 text-xl sm:px-24 sm:py-6 sm:text-2xl hover:bg-[#3550B8] transition-colors duration-300 inline-block rounded-2xl"
                 >Let's Discuss</a
               >
             </div>
@@ -208,9 +209,10 @@
                 Your Success is Our Success
               </h3>
               <p class="text-xl text-gray-700">
-                True <strong>Partnerships</strong> are forged from the <strong>shared
-                pursuit of excellence</strong> and the drive to create something truly
-                impactful. It's the foundation we're built on.
+                True <strong>Partnerships</strong> are forged from the
+                <strong>shared pursuit of excellence</strong> and the drive to
+                create something truly impactful. It's the foundation we're
+                built on.
               </p>
             </div>
             <div
@@ -239,7 +241,7 @@
               <p class="text-xl text-gray-700">
                 Exceptional Software is the result. As one cohesive team, you
                 get more than just code—you get the perfect storm for
-                <strong>innovation</strong.
+                <strong>innovation</strong>.
               </p>
             </div>
           </div>
@@ -255,28 +257,16 @@
 
       <section class="py-20 md:py-32 bg-black">
         <div class="container mx-auto px-6">
-          <div class="grid md:grid-cols-2 gap-16 items-center">
-            <div class="fade-in-section">
-              <h2
-                class="text-5xl md:text-6xl font-bold text-white leading-tight"
-              >
-                We know that creating a great product is complicated.
-              </h2>
-              <div class="mt-10">
-                <a
-                  href="#contact"
-                  class="bg-[#3F5FDD] text-white font-semibold px-24 py-6 hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block rounded-2xl"
-                  >Let's Talk</a
-                >
-              </div>
-            </div>
+          <div
+            class="flex flex-col md:grid md:grid-cols-2 md:gap-16 md:items-center"
+          >
             <div
-              class="space-y-8 fade-in-section"
+              class="md:order-2 space-y-8 fade-in-section"
               style="transition-delay: 150ms"
             >
               <div class="flex items-start">
                 <svg
-                  class="w-8 h-8 text-[#3550B8] mr-4 mt-1 flex-shrink-0"
+                  class="w-8 h-8 text-[#99C4FE] mr-4 mt-1 flex-shrink-0"
                   fill="none"
                   stroke="currentColor"
                   viewBox="0 0 24 24"
@@ -289,7 +279,7 @@
                     d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
                   ></path>
                 </svg>
-                <p class="text-xl text-white">
+                <p class="text-xl text-gray-300">
                   Our
                   <strong class="text-[#99C4FE]">Proven Process</strong> brings
                   structure and discipline to development, replacing chaos with
@@ -298,7 +288,7 @@
               </div>
               <div class="flex items-start">
                 <svg
-                  class="w-8 h-8 text-[#3550B8] mr-4 mt-1 flex-shrink-0"
+                  class="w-8 h-8 text-[#99C4FE] mr-4 mt-1 flex-shrink-0"
                   fill="none"
                   stroke="currentColor"
                   viewBox="0 0 24 24"
@@ -311,7 +301,7 @@
                     d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
                   ></path>
                 </svg>
-                <p class="text-xl text-white">
+                <p class="text-xl text-gray-300">
                   We make
                   <strong class="text-[#99C4FE]">deep collaboration</strong> a
                   priority, which does more than prevent misunderstandings—it
@@ -321,7 +311,7 @@
               </div>
               <div class="flex items-start">
                 <svg
-                  class="w-8 h-8 text-[#3550B8] mr-4 mt-1 flex-shrink-0"
+                  class="w-8 h-8 text-[#99C4FE] mr-4 mt-1 flex-shrink-0"
                   fill="none"
                   stroke="currentColor"
                   viewBox="0 0 24 24"
@@ -334,13 +324,38 @@
                     d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
                   ></path>
                 </svg>
-                <p class="text-xl text-white">
+                <p class="text-xl text-gray-300">
                   We're
                   <strong class="text-[#99C4FE]">entrepreneurs at heart</strong
                   >. We bring a deep personal stake to your project,
                   transforming your vision into an extraordinary product.
                 </p>
               </div>
+            </div>
+
+            <div
+              class="order-first md:order-1 fade-in-section text-center md:text-left"
+            >
+              <h2
+                class="text-5xl md:text-6xl font-bold text-white leading-tight"
+              >
+                We know that creating a great product is complicated.
+              </h2>
+              <div class="mt-10 hidden md:block">
+                <a
+                  href="#contact"
+                  class="bg-[#3F5FDD] text-white font-semibold px-24 py-6 hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block rounded-2xl"
+                  >Let's Talk</a
+                >
+              </div>
+            </div>
+
+            <div class="order-last mt-12 md:hidden text-center">
+              <a
+                href="#contact"
+                class="bg-[#3F5FDD] text-white font-semibold px-24 py-6 hover:bg-[#3550B8] transition-colors duration-300 text-xl inline-block rounded-2xl"
+                >Let's Talk</a
+              >
             </div>
           </div>
           <div class="mt-32 fade-in-section">
@@ -407,16 +422,41 @@
                 We bring structure and discipline to development, replacing
                 chaos with clarity, predictability, and quality.
               </p>
-              <div class="mt-6 flex flex-col justify-center">
+              <div class="mt-6 hidden lg:flex lg:flex-col lg:justify-center">
                 <div class="flex items-center gap-4">
-                  <img src="circle.png" alt="Stackit Logo" class="h-24 w-auto mt-4 fade-in-section" style="transition-delay: 100ms" />
-                  <img src="top_right.png" alt="Stackit Logo" class="h-24 w-auto mt-4 fade-in-section" style="transition-delay: 150ms" />
+                  <img
+                    src="circle.png"
+                    alt="Geometric Shape 1"
+                    class="h-24 w-auto mt-4 fade-in-section"
+                    style="transition-delay: 100ms"
+                  />
+                  <img
+                    src="top_right.png"
+                    alt="Geometric Shape 2"
+                    class="h-24 w-auto mt-4 fade-in-section"
+                    style="transition-delay: 150ms"
+                  />
                 </div>
                 <div class="flex items-center gap-4">
-                  <img src="bottom_left.png" alt="Stackit Logo" class="h-24 w-auto mt-4 fade-in-section" style="transition-delay: 100ms" />
-                  <img src="bottom_right.png" alt="Stackit Logo" class="h-24 w-auto mt-4 fade-in-section" style="transition-delay: 150ms" />
+                  <img
+                    src="bottom_left.png"
+                    alt="Geometric Shape 3"
+                    class="h-24 w-auto mt-4 fade-in-section"
+                    style="transition-delay: 100ms"
+                  />
+                  <img
+                    src="bottom_right.png"
+                    alt="Geometric Shape 4"
+                    class="h-24 w-auto mt-4 fade-in-section"
+                    style="transition-delay: 150ms"
+                  />
                 </div>
-                <img src="base.png" alt="Stackit Logo" class=" w-56 mt-4 fade-in-section" style="transition-delay: 100ms" />
+                <img
+                  src="base.png"
+                  alt="Geometric Shape 5"
+                  class="w-56 mt-4 fade-in-section"
+                  style="transition-delay: 100ms"
+                />
               </div>
             </div>
 
@@ -516,12 +556,51 @@
                 </div>
               </div>
             </div>
+
+            <div class="lg:hidden mt-12 flex flex-col items-center">
+              <div class="flex items-center gap-4">
+                <img
+                  src="circle.png"
+                  alt="Geometric Shape 1"
+                  class="h-24 w-auto mt-4 fade-in-section"
+                  style="transition-delay: 100ms"
+                />
+                <img
+                  src="top_right.png"
+                  alt="Geometric Shape 2"
+                  class="h-24 w-auto mt-4 fade-in-section"
+                  style="transition-delay: 150ms"
+                />
+              </div>
+              <div class="flex items-center gap-4">
+                <img
+                  src="bottom_left.png"
+                  alt="Geometric Shape 3"
+                  class="h-24 w-auto mt-4 fade-in-section"
+                  style="transition-delay: 100ms"
+                />
+                <img
+                  src="bottom_right.png"
+                  alt="Geometric Shape 4"
+                  class="h-24 w-auto mt-4 fade-in-section"
+                  style="transition-delay: 150ms"
+                />
+              </div>
+              <img
+                src="base.png"
+                alt="Geometric Shape 5"
+                class="w-56 mt-4 fade-in-section"
+                style="transition-delay: 100ms"
+              />
+            </div>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="bg-black text-white border-t border-gray-800">
+    <footer
+      class="bg-black text-white border-t border-gray-800 h-dvh md:h-auto flex flex-col justify-center"
+    >
       <div class="container mx-auto px-6 py-20">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
           <div class="text-center md:text-left">
