--- a/index-angel.html
+++ b/index-angel.html
@@ -255,8 +255,8 @@
         </div>
       </section>
 
-      <section class="py-20 md:py-32 bg-black">
-        <div class="container mx-auto px-6">
+      <section class="py-20 md:py-32 bg-black min-h-dvh flex items-center">
+        <div class="container mx-auto p-6">
           <div
             class="flex flex-col md:grid md:grid-cols-2 md:gap-16 md:items-center"
           >
