--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Figtree', sans-serif;
         }
         .gradient-text {
-            background: linear-gradient(to right, #00BBDD, #3CFEFF); /* Cyan Gradient */
+            background: linear-gradient(to right, #2F5CEC, #587CFE); /* Purple Gradient */
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -34,10 +34,10 @@
 <header id="header" class="bg-black fixed top-0 left-0 right-0 z-50 transition-all duration-300">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
         <a href="index.html" class="flex items-center">
-            <img src="https://raw.githubusercontent.com/stackit-llc/stackit-website-v1/main/logo2025-dark-background.png" alt="Stackit Logo" class="h-9 w-auto">
+            <img src="stackit-logo-white-purple.png" alt="Stackit Logo" class="h-9 w-auto">
         </a>
         <div class="flex items-center space-x-6">
-            <a href="#contact" class="bg-transparent border-2 border-[#00BBDD] text-white font-semibold px-6 py-3 text-base hover:bg-[#00BBDD] hover:text-white transition-colors duration-300 rounded-lg">Meet the team</a>
+            <a href="#contact" class="bg-transparent border-2 border-[#2F5CEC] text-white font-semibold px-6 py-3 text-base hover:bg-[#2F5CEC] hover:text-white transition-colors duration-300 rounded-lg">Meet the team</a>
         </div>
     </div>
 </header>
@@ -54,7 +54,7 @@
                     Build extraordinary software, with a partner who shares your standards.
                 </p>
                 <div class="mt-10 fade-in-section" style="transition-delay: 300ms;">
-                    <a href="#contact" class="bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 text-xl inline-block rounded-2xl">Get Started</a>
+                    <a href="#contact" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl">Get Started</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
                 </p>
                 <div class="mt-24 flex flex-col sm:flex-row items-center justify-center gap-6">
                     <a href="case-study.html" class="bg-transparent border-2 border-gray-300 text-gray-300 font-semibold px-20 py-5 hover:bg-gray-300 hover:text-black transition-colors duration-300 text-xl inline-block rounded-2xl">View Case Studies</a>
-                    <a href="#contact" class="bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 text-2xl inline-block rounded-2xl">Let's Discuss</a>
+                    <a href="#contact" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-2xl inline-block rounded-2xl">Let's Discuss</a>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="mt-16 text-center fade-in-section">
-                <a href="#process" class="bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 text-xl inline-block rounded-2xl">Discover Our Process</a>
+                <a href="#process" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl">Discover Our Process</a>
             </div>
         </div>
     </section>
@@ -122,20 +122,20 @@
                 <div class="fade-in-section">
                     <h2 class="text-5xl md:text-6xl font-bold text-white leading-tight">We know that creating a great product is complicated.</h2>
                     <div class="mt-10">
-                        <a href="#contact" class="bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 text-xl inline-block rounded-2xl">Let's Talk</a>
+                        <a href="#contact" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl">Let's Talk</a>
                     </div>
                 </div>
                 <div class="space-y-8 fade-in-section" style="transition-delay: 150ms;">
                     <div class="flex items-start">
-                        <svg class="w-8 h-8 text-[#00BBDD] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                        <svg class="w-8 h-8 text-[#2F5CEC] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         <p class="text-xl text-gray-300">Our <strong>Proven Process</strong> brings structure and discipline to development, replacing chaos with clarity, predictability, and quality.</p>
                     </div>
                     <div class="flex items-start">
-                        <svg class="w-8 h-8 text-[#00BBDD] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                        <svg class="w-8 h-8 text-[#2F5CEC] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         <p class="text-xl text-gray-300">We make <strong>deep collaboration</strong> a priority, which does more than prevent misunderstandings—it builds the shared purpose and creative energy that define a winning team.</p>
                     </div>
                     <div class="flex items-start">
-                        <svg class="w-8 h-8 text-[#00BBDD] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                        <svg class="w-8 h-8 text-[#2F5CEC] mr-4 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         <p class="text-xl text-gray-300">We're <strong>entrepreneurs at heart</strong>. We bring a deep personal stake to your project, transforming your vision into an extraordinary product.</p>
                     </div>
                 </div>
@@ -144,13 +144,13 @@
             <div class="mt-32 fade-in-section">
                 <div class="flex flex-wrap items-center justify-center gap-x-16 gap-y-8">
                     <a href="https://www.siemens.com/global/en.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://raw.githubusercontent.com/stackit-llc/stackit-website-v1/main/Siemens-logo-gray.png" alt="Siemens Logo" class="h-11 w-auto opacity-80 transition-all duration-300" style="filter: invert(1)">
+                        <img src="Siemens-logo.png" alt="Siemens Logo" class="h-11 w-auto opacity-80 transition-all duration-300" style="filter: invert(1)">
                     </a>
                     <a href="https://www.i2sl.org/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://raw.githubusercontent.com/stackit-llc/stackit-website-v1/main/i2sl-logo.png" alt="I2SL Logo" class="h-11 w-auto opacity-80 transition-all duration-300" style="filter: invert(1)">
+                        <img src="i2sl-logo.png" alt="I2SL Logo" class="h-11 w-auto opacity-80 transition-all duration-300" style="filter: invert(1)">
                     </a>
                     <a href="https://www.aircuity.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://raw.githubusercontent.com/stackit-llc/stackit-website-v1/main/aircuity_logo.png" alt="Aircuity Logo" class="h-11 w-auto opacity-80 transition-all duration-300" style="filter: invert(1)">
+                        <img src="aircuity_logo.png" alt="Aircuity Logo" class="h-11 w-auto opacity-80 transition-all duration-300" style="filter: invert(1)">
                     </a>
                 </div>
             </div>
@@ -222,7 +222,7 @@
                         <p class="text-xl text-gray-300 mt-4">Reach out to our team to define, make and launch new products, predictably.</p>
                     </div>
                     <div class="text-center md:text-right">
-                        <a href="#contact" class="bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
+                        <a href="#contact" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
             <!-- Left: Bio & Newsletter -->
             <div class="md:col-span-7">
                 <a href="index.html" class="inline-block mb-6">
-                    <img src="https://raw.githubusercontent.com/stackit-llc/stackit-website-v1/main/logo2025-dark-background.png" alt="Stackit Logo" class="h-9 w-auto">
+                    <img src="stackit-logo-white-purple.png" alt="Stackit Logo" class="h-9 w-auto">
                 </a>
                 <div class="text-gray-400 text-base mb-12">
                     <p>
@@ -247,8 +247,8 @@
                 </div>
                 <h2 class="text-2xl font-bold text-white mb-4">Insights for your inbox</h2>
                 <form class="flex">
-                    <input type="email" placeholder="Enter your email" class="w-full px-4 py-3 bg-gray-900 text-white border border-gray-700 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-[#00BBDD]" required>
-                    <button type="submit" class="bg-[#00BBDD] text-white font-semibold px-6 py-3 rounded-r-lg hover:bg-[#00AACC] transition-colors">
+                    <input type="email" placeholder="Enter your email" class="w-full px-4 py-3 bg-gray-900 text-white border border-gray-700 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-[#2F5CEC]" required>
+                    <button type="submit" class="bg-[#2F5CEC] text-white font-semibold px-6 py-3 rounded-r-lg hover:bg-[#234baf] transition-colors">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
                     </button>
                 </form>
@@ -280,7 +280,7 @@
                     </div>
                 </div>
                 <div class="mt-12">
-                    <img src="https://raw.githubusercontent.com/stackit-llc/stackit-website-v1/main/SuccessCodedFooter.png" alt="Success. Coded." class="h-16 w-auto" style="filter: invert(1)">
+                    <img src="success-coded-white-transparent.png" alt="Success. Coded." class="h-16 w-auto">
                 </div>
             </div>
         </div>
@@ -318,19 +318,19 @@
                     <div class="space-y-6">
                         <div>
                             <label for="full-name" class="block text-sm font-medium text-gray-400">Full Name</label>
-                            <input type="text" name="full-name" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 bg-gray-800 border border-gray-700 shadow-sm focus:ring-[#00BBDD] focus:border-[#00BBDD] text-lg text-white rounded-md">
+                            <input type="text" name="full-name" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 bg-gray-800 border border-gray-700 shadow-sm focus:ring-[#2F5CEC] focus:border-[#2F5CEC] text-lg text-white rounded-md">
                         </div>
                         <div>
                             <label for="contact-info" class="block text-sm font-medium text-gray-400">Email or Phone Number</label>
-                            <input type="text" name="contact-info" id="contact-info" class="mt-1 block w-full px-4 py-3 bg-gray-800 border border-gray-700 shadow-sm focus:ring-[#00BBDD] focus:border-[#00BBDD] text-lg text-white rounded-md">
+                            <input type="text" name="contact-info" id="contact-info" class="mt-1 block w-full px-4 py-3 bg-gray-800 border border-gray-700 shadow-sm focus:ring-[#2F5CEC] focus:border-[#2F5CEC] text-lg text-white rounded-md">
                         </div>
                         <div>
                             <label for="message" class="block text-sm font-medium text-gray-400">What do you want to build?</label>
-                            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 bg-gray-800 border border-gray-700 shadow-sm focus:ring-[#00BBDD] focus:border-[#00BBDD] text-lg text-white rounded-md"></textarea>
+                            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 bg-gray-800 border border-gray-700 shadow-sm focus:ring-[#2F5CEC] focus:border-[#2F5CEC] text-lg text-white rounded-md"></textarea>
                         </div>
                     </div>
                     <div class="mt-8">
-                        <button type="submit" class="w-full bg-[#00BBDD] text-white font-semibold px-24 py-6 hover:bg-[#00AACC] transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#00BBDD] text-xl inline-block rounded-2xl">
+                        <button type="submit" class="w-full bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#2F5CEC] text-xl inline-block rounded-2xl">
                             Send
                         </button>
                     </div>
@@ -406,4 +406,8 @@
 </script>
 </body>
 </html>
+
+
+
+
 
