--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
 </main>
 
 <!-- Footer -->
-<footer class="bg-black text-gray-300 border-t border-gray-800">
+<footer class="bg-black text-gray-300 border-t border-gray-800 min-h-screen flex items-center">
     <div class="container mx-auto px-6 py-24">
         <div class="grid grid-cols-1 md:grid-cols-10 gap-16">
             <!-- Left: Bio & Newsletter -->
             <div class="md:col-span-7">
                 <a href="index.html" class="inline-block mb-6">
-                    <img src="stackit-logo-white-purple.png" alt="Stackit Logo" class="h-9 w-auto">
+                    <img src="stackit-logo-white-white.png" alt="Stackit Logo" class="h-6 w-auto">
                 </a>
                 <div class="text-gray-400 text-base mb-12">
                     <p>
@@ -406,8 +406,4 @@
 </script>
 </body>
 </html>
-
-
-
-
 
