--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="stackit-logo-white-purple.png" alt="Stackit Logo" class="h-9 w-auto">
         </a>
         <div class="flex items-center space-x-6">
-            <a href="#contact" class="bg-transparent border-2 border-[#2F5CEC] text-white font-semibold px-6 py-3 text-base hover:bg-[#2F5CEC] hover:text-white transition-colors duration-300 rounded-lg">Meet the team</a>
+            <a href="#contact" class="bg-transparent border-2 border-[#2F5CEC] text-white font-semibold px-6 py-3 text-base hover:bg-[#2F5CEC] hover:text-white transition-colors duration-300 rounded-lg">Introduction Call</a>
         </div>
     </div>
 </header>
@@ -69,7 +69,7 @@
                     Leaders with great ideas shouldn't have to struggle to find a competent, high-performing team to execute their vision.
                 </p>
                 <div class="mt-24 flex flex-col sm:flex-row items-center justify-center gap-6">
-                    <a href="case-study.html" class="bg-transparent border-2 border-gray-300 text-gray-300 font-semibold px-20 py-5 hover:bg-gray-300 hover:text-black transition-colors duration-300 text-xl inline-block rounded-2xl">View Case Studies</a>
+                    <a href="case-study.html" class="bg-transparent border-2 border-gray-300 text-gray-300 font-semibold px-20 py-5 hover:bg-gray-300 hover:text-black transition-colors duration-300 text-xl inline-block rounded-2xl">View Our Latest Case Study</a>
                     <a href="#contact" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-2xl inline-block rounded-2xl">Let's Discuss</a>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="mt-16 text-center fade-in-section">
-                <a href="#process" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl">Discover Our Process</a>
+                <a href="#contact" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl">Meet the Team</a>
             </div>
         </div>
     </section>
@@ -215,16 +215,8 @@
                     </div>
                 </div>
             </div>
-            <div class="mt-20 pt-20 fade-in-section">
-                <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
-                    <div class="md:col-span-2 text-center md:text-left">
-                        <h3 class="text-4xl md:text-5xl font-bold text-white">Let’s work together</h3>
-                        <p class="text-xl text-gray-300 mt-4">Reach out to our team to define, make and launch new products, predictably.</p>
-                    </div>
-                    <div class="text-center md:text-right">
-                        <a href="#contact" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
-                    </div>
-                </div>
+            <div class="mt-20 pt-20 fade-in-section text-center">
+                <a href="#contact" class="bg-[#2F5CEC] text-white font-semibold px-24 py-6 hover:bg-[#234baf] transition-colors duration-300 text-xl inline-block rounded-2xl">Introduction Call</a>
             </div>
         </div>
     </section>
