--- a/index-f.html
+++ b/index-f.html
@@ -83,7 +83,7 @@
         </div>
     </section>
 
-    <!-- Winning Option: Side-by-Side (Header Left) -->
+    <!-- Option 1: Side-by-Side (Header Left) -->
     <section class="py-20 md:py-32 bg-black">
         <div class="container mx-auto px-6">
             <div class="grid md:grid-cols-2 gap-16 items-center">
@@ -107,6 +107,60 @@
                         <p class="text-lg text-gray-300">Exceptional software is the result. As one cohesive team, you get more than just code—you get the perfect storm for innovation.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Option 2: Three-Column Text -->
+    <section class="py-20 md:py-32 bg-black">
+        <div class="container mx-auto px-6">
+            <div class="text-center max-w-4xl mx-auto mb-16 fade-in-section">
+                <h2 class="text-[50px] font-bold text-white leading-tight">Your external team should feel like a top in-house team. <span class="text-[50px] text-blue-400">We deliver that experience.</span></h2>
+            </div>
+            <div class="grid md:grid-cols-3 gap-x-8 gap-y-12 max-w-6xl mx-auto text-center">
+                <div class="fade-in-section">
+                    <h3 class="text-2xl font-bold text-white mb-3">Designed to Integrate</h3>
+                    <p class="text-lg text-gray-300">Our In-House Drive is defined by three key principles: rigorous engineering discipline, deep collaboration, and an ingrained entrepreneurial spirit.</p>
+                </div>
+                <div class="fade-in-section" style="transition-delay: 150ms;">
+                    <h3 class="text-2xl font-bold text-white mb-3">Your Success is Our Success</h3>
+                    <p class="text-lg text-gray-300">True partnerships are forged from the shared pursuit of excellence and the drive to create something truly impactful. It's the foundation we're built on.</p>
+                </div>
+                <div class="fade-in-section" style="transition-delay: 300ms;">
+                    <h3 class="text-2xl font-bold text-white mb-3">More Than Just Code</h3>
+                    <p class="text-lg text-gray-300">Exceptional software is the result. As one cohesive team, you get more than just code—you get the perfect storm for innovation.</p>
+                </div>
+            </div>
+            <div class="mt-16 text-center fade-in-section">
+                <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Meet the Team</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Option 3: Editorial Layout (Blink UX Inspired) -->
+    <section class="py-20 md:py-32 bg-black">
+        <div class="container mx-auto px-6">
+            <div class="grid lg:grid-cols-3 gap-16 items-start">
+                <div class="lg:col-span-1 fade-in-section">
+                    <h2 class="text-[50px] font-bold text-white leading-tight">Your external team should feel like a top in-house team. <span class="text-[50px] text-blue-400">We deliver that experience.</span></h2>
+                </div>
+                <div class="lg:col-span-2 space-y-8 fade-in-section" style="transition-delay: 150ms;">
+                    <div>
+                        <h3 class="text-2xl font-bold text-white mb-3">Designed to Integrate</h3>
+                        <p class="text-lg text-gray-300">Our In-House Drive is defined by three key principles: rigorous engineering discipline, deep collaboration, and an ingrained entrepreneurial spirit.</p>
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold text-white mb-3">Your Success is Our Success</h3>
+                        <p class="text-lg text-gray-300">True partnerships are forged from the shared pursuit of excellence. It's the foundation we're built on.</p>
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold text-white mb-3">More Than Just Code</h3>
+                        <p class="text-lg text-gray-300">Exceptional software is the result. As one cohesive team, you get more than just code—you get the perfect storm for innovation.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-16 text-center fade-in-section">
+                <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Meet the Team</a>
             </div>
         </div>
     </section>
