--- a/index.html
+++ b/index.html
@@ -302,19 +302,19 @@
             <div class="bg-[#181818] p-8 md:p-12 flex flex-col justify-center">
                 <h2 class="text-3xl font-bold text-white mb-2">Think we can help?</h2>
                 <p class="text-xl text-gray-400 mb-8">Share the challenge you’re facing or the outcome you’re aiming for, and let’s get started.</p>
-                <form method="POST" action="#" aria-label="Contact form">
+                <form method="POST" action="#" aria-label="Contact form" id="contact-form">
                     <div class="space-y-6">
                         <div>
                             <label for="full-name" class="block text-sm font-medium text-gray-400">Full Name</label>
-                            <input type="text" name="fullName" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg" required />
+                            <input type="text" name="fullName" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"/>
                         </div>
                         <div>
                             <label for="contact-info" class="block text-sm font-medium text-gray-400">Email</label>
-                            <input type="email" name="contactInfo" id="contact-info" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg" required />
+                            <input type="email" name="contactInfo" id="contact-info" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"/>
                         </div>
                         <div>
                             <label for="message" class="block text-sm font-medium text-gray-400">What do you want to build?</label>
-                            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg" required></textarea>
+                            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 bg-transparent border border-gray-600 text-white rounded-lg shadow-sm focus:ring-[#3F5FDD] focus:border-[#3F5FDD] text-lg"></textarea>
                         </div>
                     </div>
                     <div class="mt-8">
@@ -343,8 +343,12 @@
         const overlay = document.getElementById('overlay');
         const closeBtn = document.getElementById('close-panel-btn');
         const openTriggers = document.querySelectorAll('a[href="#contact"]');
+        const form = document.getElementById('contact-form');
 
-        function openPanel() {
+        let lastClickedTrigger = null;
+
+        function openPanel(trigger) {
+            lastClickedTrigger = trigger;
             overlay.classList.remove('hidden');
             contactPanel.classList.remove('hidden');
             document.body.style.overflow = 'hidden';
@@ -354,25 +358,40 @@
             });
         }
 
-        function closePanel() {
+        function closePanel(scrollToTrigger = false) {
             overlay.classList.remove('opacity-75');
             contactPanel.classList.add('translate-x-full');
             setTimeout(() => {
                 overlay.classList.add('hidden');
                 contactPanel.classList.add('hidden');
                 document.body.style.overflow = '';
+                if (scrollToTrigger && lastClickedTrigger) {
+                    lastClickedTrigger.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                }
             }, 500);
         }
 
         openTriggers.forEach(trigger => {
             trigger.addEventListener('click', e => {
                 e.preventDefault();
-                openPanel();
+                openPanel(trigger);
             });
         });
 
-        closeBtn.addEventListener('click', closePanel);
-        overlay.addEventListener('click', closePanel);
+        closeBtn.addEventListener('click', () => closePanel(false));
+        overlay.addEventListener('click', () => closePanel(false));
+
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const formContainer = form.parentElement;
+            formContainer.innerHTML = `
+                    <div class="text-center h-full flex flex-col justify-center">
+                        <h2 class="text-3xl font-bold text-white mb-4">Thank You!</h2>
+                        <p class="text-xl text-gray-300">We've received your message and will be in touch shortly.</p>
+                    </div>
+                `;
+            setTimeout(() => closePanel(true), 2500);
+        });
     });
 </script>
 </body>
