--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <a href="#" class="inline-block mb-6">
                     <img src="stackit-logo-white-white.webp" alt="Stackit Logo" class="h-6 w-auto" />
                 </a>
-                <div class="text-gray-300 text-base mb-12">
+                <div class="text-gray-300 text-lg mb-12">
                     <p>Stackit is a software development agency. With a specialty in business systems, SaaS, and critical application design, we're the preferred partner for companies that want to build extraordinary software with a team that shares their standards. We provide a true software development partnership, built on a culture of deep collaboration and rigorous engineering discipline. We give you the confidence of a great in-house team, freeing you to innovate at speed.</p>
                     <p class="mt-4 font-semibold text-gray-300">San Diego, CA</p>
                 </div>
@@ -264,7 +264,7 @@
             <div class="md:col-span-3 flex flex-col items-start">
                 <div class="text-left w-full">
                     <h2 class="text-2xl font-bold text-white mb-6">Get In Touch</h2>
-                    <div class="space-y-4 text-base text-gray-300">
+                    <div class="space-y-4 text-lg text-gray-300">
                         <p><a href="mailto:hello@stackitgroup.com" class="hover:text-white transition-colors">hello@stackitgroup.com</a></p>
                         <p><a href="tel:+16199175387" class="hover:text-white transition-colors">+1 (619) 917-5387</a></p>
                         <p><a href="https://www.linkedin.com/company/stackit/" target="_blank" rel="noopener noreferrer" class="font-semibold text-white hover:underline">LinkedIn</a></p>
