--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="py-20 md:py-32 bg-black">
         <div class="container mx-auto px-6">
             <div class="text-center max-w-4xl mx-auto mb-16 fade-in-section">
-                <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight">Your external team should feel like a top in-house team. <span class="text-[#99C4FE]">We deliver that experience</span></h2>
+                <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight">Your external team should feel like a top in-house team. <span class="text-white underline">We deliver that experience</span></h2>
             </div>
             <div class="grid md:grid-cols-3 gap-x-8 gap-y-12 max-w-6xl mx-auto text-center">
                 <div class="fade-in-section">
